# slack-dashboard

./: .dockerignore  .gitignore  .otto.yml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  slack-dashboard.example.yml
docs/: handoff.md
docs/design/: 2026-03-24-slack-dashboard-design.md  2026-03-25-api-throughput.md  2026-03-25-socket-mode-redesign.md  2026-06-21-ranking-and-triage-redesign-implementation-notes.md  2026-06-21-ranking-and-triage-redesign.md  2026-06-27-emoji-signals-and-observation-store-implementation-notes.md  2026-06-27-emoji-signals-and-observation-store.md  2026-06-27-prioritization-and-footprint.md  2026-06-29-repurpose-fire-heated-exchange-implementation-notes.md  2026-06-29-repurpose-fire-heated-exchange.md  2026-06-30-calibration-trace.md  2026-06-30-heat-metrics-strip-implementation-notes.md  2026-06-30-heat-metrics-strip.md  2026-06-30-heat-remodel-and-calibration-arena-implementation-notes.md  2026-06-30-heat-remodel-and-calibration-arena.md
src/slack_dashboard/: config.py  connection.py  dismiss.py  heat.py  main.py  observed.py  thread.py  web.py  worktime.py
src/slack_dashboard/llm/: provider.py
src/slack_dashboard/slack/: queue.py  (+4 more)
tests/: test_config.py  test_connection.py  test_dismiss.py  test_e2e.py  test_grouping.py  test_heat.py  test_observed.py  test_thread.py  test_web.py  test_worktime.py
tests/calibration/: __init__.py  board.py  criteria.py  score.py  test_calibration.py
tests/llm/: test_provider.py
tests/slack/: test_client.py  test_listener.py  test_mrkdwn.py  test_poller.py  test_queue.py
(+7 files in other folders)
